--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,28 @@ header {
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
 }
 
+header img {
+  max-width: 200px;
+}
+
 header h1 {
   flex-grow: 1;
   text-align: center;
+}
+
+@media all and (max-width: 555px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  header img {
+    min-width: 250px;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    margin: 1.5rem 0 0;
+  }
 }
