--- a/css/styles.css
+++ b/css/styles.css
@@ -83,3 +83,25 @@ header h1 {
     font-size: 1rem;
   }
 }
+
+@media all and (min-width: 556px) and (max-width: 1024px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    margin: 1.5rem 0 0;
+  }
+
+  .pokemon-list {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 0.3rem;
+  }
+
+  .button {
+    font-size: 1.5rem;
+  }
+}
