--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ header h1 {
   font-size: 1.5rem;
   font-weight: 700;
   background-color: #d1ffdf;
+  cursor: pointer;
 }
 
 .loadingMessage {
@@ -112,6 +113,39 @@ header h1 {
   cursor: pointer;
 }
 
+.detail-wrapper {
+  display: flex;
+
+  align-items: center;
+  margin-top: 1.5rem;
+  gap: 0.5rem;
+}
+
+.description-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+  gap: 0.5rem;
+}
+
+.description-wrapper h1,
+.description-wrapper p {
+  margin: 0;
+}
+
+.description-wrapper h1 {
+  margin-bottom: 1rem;
+}
+
+.description-wrapper p {
+  line-height: 0;
+}
+
+.detail-wrapper img {
+  min-width: 250px;
+}
+
 @media all and (max-width: 555px) {
   header {
     flex-direction: column;
@@ -131,6 +165,10 @@ header h1 {
 
   .button {
     font-size: 1rem;
+  }
+
+  .detail-wrapper img {
+    min-width: 100px;
   }
 }
 
