--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,8 @@ header h1 {
   font-weight: 700;
   background-color: #d1ffdf;
   cursor: pointer;
+  color: black;
+  border: none;
 }
 
 .loadingMessage {
