--- a/css/styles.css
+++ b/css/styles.css
@@ -54,12 +54,12 @@ header h1 {
 }
 
 .button {
-  margin: 0 auto 0.3rem;
-  padding: 1rem;
   min-width: 20ch;
   font-size: 1.5rem;
   font-weight: 700;
   background-color: #d1ffdf;
+  color: black;
+  border: white;
   cursor: pointer;
 }
 
