feat: Add additional comments and include description for arrows
Description of arrows is "previous" and "next" respective to
ease user access and navigation.

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,11 @@ header h1 {
 }
 
 .pokemon-image {
-  min-width: 250px;
+  min-width: 100px;
+}
+
+.arrow-wrapper {
+  cursor: pointer;
 }
 
 @media all and (max-width: 555px) {
