--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ header {
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
 }
 
-header img {
+.navbar-brand img {
   min-width: 250px;
 }
 
@@ -37,6 +37,25 @@ header h1 {
   flex-grow: 1;
   font-size: 2.5rem;
   text-align: center;
+}
+
+.search-wrapper {
+  display: flex;
+  margin: auto;
+  align-items: center;
+  flex-wrap: nowrap;
+  cursor: pointer;
+}
+
+.search-glass {
+  min-width: 100px;
+}
+
+#pokemon-search::placeholder {
+  padding: 0.5rem;
+}
+#pokemon-search {
+  padding: 0.5rem;
 }
 
 .pokemon-list {
