feat: Add highlighting of the searched sequence in the output

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,11 @@ header h1 {
   display: flex;
 }
 
+.search-sequence {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 .pokemon-list {
   display: grid;
   margin: 0 auto;
